Bug 408977 - [wayland] maximized windows don't take latte struts into account on startup
Summary: [wayland] maximized windows don't take latte struts into account on startup
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Plasma
Component: application (show other bugs)
Version: git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-21 08:28 UTC by tromzy
Modified: 2019-06-24 14:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments
My Latte layout (9.60 KB, text/plain)
2019-06-24 07:34 UTC, tromzy
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tromzy 2019-06-21 08:28:25 UTC
SUMMARY
On Wayland, my Latte is set to "Always visible", but when I make a window fullscreen, it acts like Latte panel wasn't there, and the bottom of the window goes below the Latte panel. To fix it, I have to go to Latte settings, set Latte to something else than "Always visible", then switch back to "Always visible". Then, my fullscreen windows do not hide behind Latte anymore.

STEPS TO REPRODUCE
1. Use Plasma Wayland 
2. Set Latte to "Always visible"
3. Make a window fullscreen

OBSERVED RESULT
Part of the window goes behind the Latte panel (bottom of the window if the Latte panel is set at the bottom of the screen)

EXPECTED RESULT
The window should not be masked by Latte.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.16.1
KDE Frameworks Version: 5.59
Qt Version: 5.12.3

ADDITIONAL INFORMATION
Archlinux, Latte git version
Comment 1 Michail Vourlakos 2019-06-21 22:51:15 UTC
1. If you close Latte and restart it, same thing happens?
2. Can you send your Latte layout file to try to reproduce in my system?
Comment 2 Michail Vourlakos 2019-06-23 13:16:03 UTC
3. send also your layout file in case this a specific option that creates it
Comment 3 tromzy 2019-06-24 07:34:09 UTC
Created attachment 121107 [details]
My Latte layout
Comment 4 tromzy 2019-06-24 07:35:06 UTC
(In reply to Michail Vourlakos from comment #1)
> 1. If you close Latte and restart it, same thing happens?
> 2. Can you send your Latte layout file to try to reproduce in my system?

1. Yes, if I close Latte and then run it again, the same problem happens. Only workaround I found is the one I describe in the first post.

2. See attachment.
Comment 5 tromzy 2019-06-24 07:58:32 UTC
Also, I just tried with a new Latte layout and the problem occurs too.
Comment 6 Michail Vourlakos 2019-06-24 14:27:29 UTC
just to clarify, by Fullscreen you mean MAXIMIZED or FULLSCREEN ? 
for MAXIMIZED I have a fix
Comment 7 Michail Vourlakos 2019-06-24 14:28:15 UTC
Git commit 5546a237a2a8f786df71cb32ec29b7dd7ac0d559 by Michail Vourlakos.
Committed on 24/06/2019 at 14:27.
Pushed by mvourlakos into branch 'master'.

update struts propertly on wayland startup

M  +9    -2    app/wm/waylandinterface.cpp

https://commits.kde.org/latte-dock/5546a237a2a8f786df71cb32ec29b7dd7ac0d559
Comment 8 tromzy 2019-06-24 14:36:49 UTC
(In reply to Michail Vourlakos from comment #6)
> just to clarify, by Fullscreen you mean MAXIMIZED or FULLSCREEN ? 
> for MAXIMIZED I have a fix

I mean when you click the button in the red square : 

https://i.imgur.com/KHNssgn.png
Comment 9 Michail Vourlakos 2019-06-24 14:39:27 UTC
Ok, these as MAXIMIZED windows... this is now fixed
Comment 10 tromzy 2019-06-24 14:49:27 UTC
Sorry for using the wrong term ! I can confirm it is fixed !