update struts propertly on wayland startup

BUG: 408977